@@ -11,7 +11,8 @@ public class LibraryMySqlApplication {
 
         // 通过命令行自动打开首页
         try {
-            Runtime.getRuntime().exec("cmd /c start http://localhost:8080/index");
+            Runtime.getRuntime().exec(new String[]{"cmd","/c","start http://localhost:8080/home"});
+//            Runtime.getRuntime().exec("cmd /c start http://localhost:8080/index");
         } catch (Exception e) {
             e.printStackTrace();
         }
